--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,16 +12,16 @@ add_executable(InstrBase
 )
 
 pico_enable_stdio_usb(InstrBase 1)
-pico_enable_stdio_uart(InstrBase 1)
+#pico_enable_stdio_uart(InstrBase 1)
 
 pico_add_extra_outputs(InstrBase)
 
-#add_subdirectory(pico-ssd1306)
+add_subdirectory(src/extern/pico-ssd1306)
 add_subdirectory(src/extern/hx711-pico-c)
 target_link_libraries(InstrBase
     pico_stdlib
     pico_multicore
     hardware_pio
     hx711-pico-c
-    #    pico_ssd1306
+    pico_ssd1306
     hardware_i2c)
