Better loggin and code organization, converter from data to byte array to be easily stored in flash

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ pico_sdk_init()
 
 add_executable(InstrBase
         src/main.cpp
-)
+        src/helpers.h)
 
 pico_enable_stdio_usb(InstrBase 1)
 #pico_enable_stdio_uart(InstrBase 1)
