Exporting as CSV functionality and multiple recordings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,9 @@ add_executable(InstrBase
         src/hw_config.c
         src/sd_card_driver.c
         src/sd_card_driver.h
-        src/config.h src/main.h src/helpers.c)
+        src/config.h
+        src/main.h
+        src/helpers.c)
 
 pico_enable_stdio_usb(InstrBase 1)
 #pico_enable_stdio_uart(InstrBase 1)
